test/tests/errors/error-file-reset-not-file.sm
// true
// false
/**/
/**/

program{
    file f withbuffer bf;
    var x = 1;
    reset(x);
}